Fixed OCD inducing alignment issue

--- a/news.css
+++ b/news.css
@@ -89,7 +89,7 @@ body
     font-size: 50%;
     color: grey;
     float: right;
-    margin-top: 1%;
+    margin-top: 0.75%;
 }
 
 .posts section p
