--- a/pages/news_c.css
+++ b/pages/news_c.css
@@ -25,7 +25,7 @@
     font-size: 50%;
     color: grey;
     float: right;
-    margin-top: 1%;
+    margin-top: 0.75%;
 }
 
 .posts section p
